<resources>
    <string name="app_name">mapSqLite1</string>
    <string name="title_activity_gestion">Gestion</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_insertarUsuario">Registrar Usuario</string>
    <string name="menu_consultarUsuario">Consultar Usuario</string>
    <string name="menu_listarUsuario">Listar Usuario</string>
    <string name="menu_listarUsuarioSpinner">Listar Usuario Spinner</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>