<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_insertarUsuario"
            android:icon="@drawable/ic_inusuario"
            android:title="@string/menu_insertarUsuario" />
        <item
            android:id="@+id/nav_consultarUsuario"
            android:icon="@drawable/ic_consultarusuario"
            android:title="@string/menu_consultarUsuario" />
        <item
            android:id="@+id/nav_listarUsuario"
            android:icon="@drawable/ic_listarusuario"
            android:title="@string/menu_listarUsuario" />
        <item
            android:id="@+id/nav_listarUsuarioSpinner"
            android:icon="@drawable/ic_listarusuario_spinner"
            android:title="@string/menu_listarUsuarioSpinner" />
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_slideshow" />
    </group>
</menu>